[package]
name = "loukanikos"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
etherparse = "0.19.0"
hex-string = "0.1.0"
json = "0.12.4"
macaddr = "1.0.1"
pcap = "2.2.0"
regex = "1.11.1"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
toml = "0.8.20"
u4 = "0.1.2"
